--- a/HrNew.MVC/Views/Shared/_Layout.cshtml
+++ b/HrNew.MVC/Views/Shared/_Layout.cshtml
@@ -38,13 +38,13 @@
                             if (User.IsInRole("Administrator"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="HrAllocations" asp-action="Index">Allocations</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="HrAllocations" asp-action="Index">Pracownicy</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="HrTypes" asp-action="Index">Types</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="HrTypes" asp-action="Index">Rodzaje zwolnienia</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="HrRequests" asp-action="Index">Requests</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="HrRequests" asp-action="Index">Wnioski</a>
                                 </li>
                             }
 
